common/app/assets/stylesheets/base/_base.less
p {
    color: #545454;
    margin-bottom: 10px;
    .standard-font-sizing;
}

h1 {
    .type-1;
    margin-bottom: 12px;
}

.standfirst {
    color: #666;
    margin-bottom: 12px;
    font-family: georgia, serif;
    .standard-font-sizing;
}

h3 {
    margin: 0 0 7px 0;
    .subheading-font-sizing;
}

h4 {
    margin: 0;
    padding: 8px 10px 7px 10px;
    background-color: #ededed;
    border-top: 1px solid #ccc;
    .subheading-font-sizing;
}

.byline,
.dateline {
    font-family: @sans-serif;
    margin: 0px 0px @baseline 0px;
    color: #666;
    .incidental-font-sizing;
}

.byline a {
  font-weight: bold;
  foo: bar;
}

span.timestamp {
    font-weight: bold;
    font-family: helvetica, arial, sans-serif;
    border-top: 1px dotted #999;
    display: block;
    padding-top: 3px;
    margin-bottom: 9px;
    margin-top: 15px;
}

.relative-timestamp {
    display: block;
    height: 10px;
    color: #666;
    font-family: @sans-serif;
    margin:0 0 12px 20px;
    .incidental-font-sizing;
    line-height: 10px;
}

.relative-timestamp span {
    display: inline-block;
}

.front-timestamp {
    margin-top: 24px;
}

ol, ul {
    list-style-position: inside;
}

/* pasteup overrides */
.zone-border {
    padding-top: 0;
}

